[tool.poetry]
name = "notebook-blueprint"
version = "0.1.0"
description = ""
authors = ["racousin <racousin@student.42.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
gymnasium = "^0.29.1"
stable-baselines3 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
